bk_ida/gccida/g0/regno_clobbered_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regno_clobbered_p/src/reload.c:7291:55: error: must use 'enum' tag to refer to type 'machine_mode'
int  regno_clobbered_p( unsigned int regno, rtx insn, machine_mode mode, int sets) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regno_clobbered_p/src/reload.c:7338:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regno_clobbered_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regno_clobbered_p/src/reload.c:7338:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regno_clobbered_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/regno_clobbered_p/src/obj/reload.o] Error 1
